# modeling

./: .env  .gitignore  pyproject.toml
modeling/: __main__.py
modeling/ab_testing/: bayesian_bandit.py  optimistic_initial_value.py
modeling/config/: __init__.py  formatter.py  settings.py
modeling/convolution/: __main__.py  conv_1d_example.py  conv_2d_example.py
modeling/docs/: __main__.py  conf.py  index.rst
modeling/docs/_ext/: formula.py  math_replace.py
modeling/docs/pages/: convolution.rst  linear_algebra.rst  matrix_operations.rst
modeling/docs/pages/recommendation/: index.rst  matrix_factorization.rst
modeling/llm/: __main__.py  mlx__attention.py  mlx__encoder.py  mlx__model.py  torch__attention.py
modeling/recommendation/: __main__.py  helper.py  matrix_factorization.py  preprocess.py  preprocess2sparse.py
src/: main.py
src/config/: __init__.py  formatter.py  settings.py
src/convolution/: __init__.py  conv_1d_example.py  conv_2d_example.py
src/docs/: __main__.py  index.rst
src/docs/_diagrams/: sequence.puml
src/docs/pages/: architecture.rst  convolution.rst  directory_structure.rst  probability.rst
