[project]
name = "modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "kaggle>=1.6.17",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modeling"]

[tool.hatch.version]
path = "pkg/__init__.py"
pattern = "BUILD = 'b(?P<version>[^']+)'"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "recommonmark>=0.7.1",
    "sphinx>=8.2.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-plantuml>=0.30",
    "watchdog>=6.0.0",
]
